# exp-harness

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-tests.yml  slow-tests.yml
docker/exp-harness-runner/: Dockerfile  README.md
examples/: toy.yaml  toy_base.yaml  toy_overlay.yaml
scripts/: README.md  docker_build_runner_image.sh  run-experiment-dood
src/exp_harness/: cli.py  config.py  docker_utils.py  errors.py  fingerprints.py  gpu_pool.py  inspect_run.py  interp.py  locks.py  (+9 more)
tests/: conftest.py  helpers.py  test_cli.py  test_cli_negative_paths.py  test_cli_sweep.py  test_docker_argv.py  test_docker_argv_more.py  test_docker_executor_prepare_probe.py  test_docker_gpu_mode_auto_fallback.py  test_docker_image_strictness.py  test_docker_retry_on_deviceids_error.py  test_docker_runtime.py  test_docker_system.py  test_docker_utils_inspect_image.py  test_fingerprints.py  test_gpu_pool.py  test_gpu_pool_concurrency.py  test_gpu_pool_more.py  test_interp.py  test_local_executor_stream_logs.py  test_local_integration.py  test_local_offline_and_timeout.py  test_locks_gc.py  test_phase_allocate_cleanup.py  test_provenance.py  test_resolve_extends_and_vars.py  test_resume.py  test_roots_precedence.py  test_run_already_exists_and_salt.py  test_run_api.py  test_run_id_naming.py  test_run_key.py  test_run_key_portability.py  test_runner_failure_stderr_tail_and_by_time.py  test_set_overrides.py  test_shell_out_missing_exe.py  test_status_and_logs.py  test_step_dag_validation.py  test_step_lifecycle_state.py
(+25 files in other folders)
